[package]
name = "cli"
version = "0.1.0"
authors = ["brendoprendo <brendan.prednis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = "2.33.3"
indicatif = "0.16.2"
structopt = "0.3.22"
